src/test/resources/public/input/typechecking/fail/undeclared_id/fail01.jova
class Test{

}

class Main {

  public int main() {
    var = 1;
    return 0;
  }

}